# pelican-optimise-images

./: .gitignore  README.md  main.py  pyproject.toml
pelican_optimise_images/: __init__.py  _optimise.py  _plugin.py
tests/: test_pelican_optimise_images.py
