[tool.poetry]
name = "pelican-optimise-images"
version = "0.1.0"
description = ""
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.2"
click = "^8.0.1"
beautifulsoup4 = "^4.8.2"
lxml = "^5.0.0"
pelican = "^4.2.0"
hitherdither = {git = "https://github.com/hbldh/hitherdither.git"}
numpy = "^1.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
optimise_image = "main:optimise"
prepare_samples = "main:prepare_samples"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
